k8s/argocd-repo-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  template:
    spec:
      serviceAccountName: argocd-repo-server
      volumes:
        - name: custom-tools
          emptyDir: {}
        - name: cmp-server-plugins
          emptyDir: {}
        - name: cmp-server-config
          configMap:
            name: argocd-cmp-cm
 
      containers:
        - name: cmp-server
          volumeMounts:
            - name: custom-tools
              mountPath: /usr/local/bin/argocd-vault-plugin
              subPath: argocd-vault-plugin
            - name: cmp-server-plugins
              mountPath: /home/argocd/cmp-server/plugins
            - name: cmp-server-config
              mountPath: /home/argocd/cmp-server/config
