k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute    
metadata:
  name: dev-route
  namespace: dev
spec:
  parentRefs:
    - name: dev-gateway  
  hostnames:
    - dev.admedia.com    
  rules:
    - matches:
        - path:
            type:  PathPrefix
            value: /
      backendRefs:
        - name: dev-svc-my-app
          port: 80
